Don't allow player swap if we have 1 or fewer players